# firecracker-poc

./: .gitignore  Cargo.toml  Makefile  README.md  build_rootfs.sh  linux.yaml  vm_api_server.py
.cursor/memory/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  tasks.md  techContext.md
.github/workflows/: build.yml
fixtures/: machine.json
scripts/: check_kvm_status.sh  fix_kvm_permissions.sh  setup_firecracker.sh  test_api.sh
specs/: 0001-poc.md  claude.md  instructions.md
src/: lib.rs  main.rs  runner.rs
ui/: package.json
